# zhangdamao.com

./: .gitignore  .gitmodules  LICENSE.txt  README.md  create_post.py  generate_post_header.py  pelicanconf.py  prompt.txt  publishconf.py  pyproject.toml  requirements.txt  themes
content/pages/: about.md
content/posts/: auto-generate-post-headers-using-gpt3-16k.md  azure-vscode-sign-in-issue.md  build-a-static-site-via-pelican.md  building-an-openclaw-plugin-task-monitor.md  clean-your-python-on-mac.md  configuring-openclaw-multi-agent-setup.md  generating-gitignore-with-toptal.md  github-ssh-error.md  mysterous-black-screen-with-flutter-ios.md  optimizing-zsh-config-on-mac.md  rewriting-my-post-header-generator-around-ollama.md  setting-up-native-ip-proxy-via-resident-ip-cn.md  setting-up-native-ip-proxy-via-resident-ip.md  setup-https-via-certbot.md  use-ollama-to-generate-post-excerpt.md  using-apple-weather-kit-api.md  we-are-not-amused.md  you-have-mail-but-no-mail.md  youtube-video-summarizer.md
